# resvg-js

./: .editorconfig  .eslintignore  .eslintrc.yml  .gitattributes  .gitignore  .prettierignore  .yarnrc.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  bundle-cli.js  bundle-prepublish.js  bundle.js  index.d.ts  index.js  js-binding.d.ts  js-binding.js  package-lock.json  package.json  renovate.json  rust-toolchain  rustfmt.toml  wasm-binding.ts
.cargo/: config.toml
.github/workflows/: CI.yaml  auto-merge.yaml  lint.yaml
__test__/: cli.spec.ts  helper.ts  index.spec.ts  wasm.spec.ts
benchmark/: bench-wasm.ts  bench.ts
cli/: cli.js  cli.ts  help.d.ts  help.js  help.ts  option.js  option.ts  style.js  style.ts  util.js  util.ts
example/: async.js  bbox.js  compare.js  image-url.js  index-deno.js  index.js  out-resvg-js@2x.avif  sprite.js  text.js  wasm-node.js
npm/: README.md
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: index.cjs  index.d.ts  index.html  index.js  index.min.js  index.mjs  index_bg.wasm
src/: builder.rs  error.rs  fonts.rs  lib.rs  moz_jepg.rs  options.rs
wasm/: README.md  index.d.ts  index.html  index.js  index.min.js  index.mjs  index_bg.wasm  package.json
wasm-simd/: index.d.ts  index.js  index.mjs  index_bg.wasm
